--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".", // all paths are relative to the baseUrl
+    "paths": {
+      "*": ["app/*"],
+      "utils": ["app/utils/*"],
+      "assets/*": ["assets/*"],
+    }
+  }
 }
