--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/restyle": "^2.4.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-flipper": "^0.183.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -33,7 +34,8 @@
     "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "realm": "^11.5.1"
+    "realm": "^11.5.1",
+    "redux-flipper": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
